manageAppointment
